--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <link href="/favicon.ico" rel="icon" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
   <title>ResTechs 2 App</title>
 </head>
 <body>
